--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
 
     <ion-pane>
       <ion-header-bar class="bar-positive">
-        <h1 class="title">My Reddit</h1>
+        <h1 class="title">latest Android Newsfeed </h1>
       </ion-header-bar>
       <ion-content>
 
